--- a/home.html
+++ b/home.html
@@ -160,15 +160,18 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>What is a BroTato?</p>
+					<p>Brotato explained?</p>
                 </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>Its a name, a lifestyle.
+					<p>Similar to broseph or brosnake, but with a twist. Also means bro / brother.</p>
+					</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                <div class="col-lg-12 text-center">
+                    
+                    <hr class="star-light">
+					<h2>Yo sup my baked brotato</h2>
                 </div>
             </div>
         </div>
@@ -236,7 +239,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>Put bonacinke 23<br>Hrvatska, Split 21000</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
